lang/examples/bad/WrongArgumentType.gt
fn f(x : int) -> int {
    return x;
}

fn main() -> int {
    f(true);
    return 0;
}
